Project-1-Eskiner/Eskiner Package/main/default/objects/Order_Track__c/Order_Track__c.object-meta.xml
<CustomObject>
    <description>Showcases the current item orders</description>
    <label>Order Track</label>
    <nameField>
        <displayFormat>ORD#-{0000}</displayFormat>
        <label>Order Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>