Project-1-Eskiner/Eskiner Package/main/default/objects/Order_Track__c/fields/Items_Name__c.field-meta.xml
<CustomField>
    <fullName>Items_Name__c</fullName>
    <label>Items Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>