Project-1-Eskiner/Eskiner Package/main/default/objects/Order_Track__c/fields/Items_Price__c.field-meta.xml
<CustomField>
    <fullName>Items_Price__c</fullName>
    <label>Items Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>