Project-1-Eskiner/Eskiner Package/main/default/objects/Order_Track__c/fields/itemTypeText__c.field-meta.xml
<CustomField>
    <fullName>itemTypeText__c</fullName>
    <label>itemTypeText</label>
    <length>20</length>
    <type>Text</type>
</CustomField>