Project-1-Eskiner/Eskiner Package/main/default/objects/Order_Track__c/fields/Make_Order__c.field-meta.xml
<CustomField>
    <fullName>Make_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Make_Order</label>
    <referenceTo>Make_Order__c</referenceTo>
    <relationshipLabel>Order Tracker</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>