Project-1-Eskiner/Eskiner Package/main/default/objects/Order_Track__c/fields/Seller_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Seller_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller_Inventory</label>
    <referenceTo>Seller_Inventory__c</referenceTo>
    <relationshipLabel>Order Tracker</relationshipLabel>
    <relationshipName>Order_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>